2009-11-23  Andy Hutchinson  <hutchinsonandy@gcc.gnu.org>

	* gcc.dg/tree-ssa/asmgoto-1.c: Suppress warnings.

2009-11-23  Andy Hutchinson  <hutchinsonandy@gcc.gnu.org>

	* gcc.c-torture/execute/ipa-sra-2.x: New. Skip for 16bit targets.


2009-11-23  Andy Hutchinson  <hutchinsonandy@gcc.gnu.org>

	* gcc.dg/sms-6.c: Use long for 16 bit int targets.
	* gcc.dg/sms-7.c: Ditto.

2009-11-23  Andy Hutchinson  <hutchinsonandy@gcc.gnu.org>

	* gcc.dg/pr36998.c: Frame pointer required for avr target.
	* gcc.dg/debug/pr41264-1.c: Use long if int size 16bit or smaller.
	* gcc.dg/pr39226.c: Use smaller bitfield if int size is 16bit.
	* gcc.dg/pr41340.c: Test requires long pointer target.
	* gcc.dg/profile-generate-3.c: Test requires profiling support.

2009-11-23  Andy Hutchinson  <hutchinsonandy@gcc.gnu.org>

	* gcc.dg/graphite/block-1.c: Require 32-bit or larger array support.
	* gcc.dg/graphite/block-3.c: Ditto.
	* gcc.dg/graphite/block-4.c: Ditto.
	* gcc.dg/graphite/block-5.c: Ditto.
	* gcc.dg/graphite/block-6.c: Ditto.
	* gcc.dg/graphite/interchange-0.c: Ditto.
	* gcc.dg/graphite/interchange-1.c: Ditto.
	* gcc.dg/graphite/interchange-2.c: Ditto.
	* gcc.dg/graphite/interchange-3.c: Ditto.
	* gcc.dg/graphite/interchange-4.c: Ditto.
	* gcc.dg/graphite/interchange-5.c: Ditto.
	* gcc.dg/graphite/interchange-6.c: Ditto.
	* gcc.dg/graphite/run-id-1.c: Ditto.
	* gcc.dg/graphite/scop-16.c: Ditto.
	* gcc.dg/graphite/scop-17.c: Ditto.
	* gcc.dg/graphite/scop-18.c: Ditto.
	* gcc.dg/graphite/scop-matmult.c: Ditto.
	* gcc.dg/graphite/pr40157.c: Require 32bit or larger int.
	* gcc.dg/graphite/id-15.c: Ditto.

2009-11-23  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/weak1.ads: New test.

2009-11-23  Steve Ellcey  <sje@cup.hp.com>

	* gcc.dg/debug/dwarf2/inline2.c: Modify scan.

2009-11-23  Dodji Seketeli  <dodji@redhat.com>

	PR c++/14777
	* g++.dg/template/typedef13.C: Adjust.
	* g++.dg/template/typedef19.C: Adjust.
	* g++.dg/template/typedef20.C: Adjust.