@@ -44,11 +44,11 @@ void m (char16_t c0, char32_t c1)
     f_c (c1);	/* { dg-warning "alter its value" } */
     fsc (c1);	/* { dg-warning "alter its value" } */
     fuc (c1);	/* { dg-warning "alter its value" } */
-    f_s (c1);	/* { dg-warning "alter its value" "" { target { ! "avr-*-*" } } } */
-    fss (c1);	/* { dg-warning "alter its value" "" { target { ! "avr-*-*" } } } */
-    fus (c1);	/* { dg-warning "alter its value" "" { target { ! "avr-*-*" } } } */
-    f_i (c1);	/* { dg-warning "change the sign" } */
-    fsi (c1);	/* { dg-warning "change the sign" } */
+    f_s (c1);	/* { dg-warning "alter its value" } */
+    fss (c1);	/* { dg-warning "alter its value" } */
+    fus (c1);	/* { dg-warning "alter its value" } */
+    f_i (c1);	/* { dg-warning "change the sign" "" { target { ! int16 } } } */
+    fsi (c1);	/* { dg-warning "change the sign" "" { target { ! int16 } } } */
     fui (c1);
     f_l (c1);	/* { dg-warning "change the sign" "" { target { llp64 || ilp32 } } } */
     fsl (c1);	/* { dg-warning "change the sign" "" { target { llp64 || ilp32 } } } */
